refactor: asset javascript

--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -96,28 +96,4 @@
   <div class="col-md-2"></div>
 </main>
 
-
-<script>
-  $(document).on('ready', function() {
-    handle_preview($("#files"), $(".card-img"));
-  });
-
-  function readURL(input, image) {
-    console.log(input.files)
-    if (input.files && input.files[0]) {
-      var reader = new FileReader();
-
-      reader.onload = function(e) {
-        image.attr('src', e.target.result);
-      };
-
-      reader.readAsDataURL(input.files[0]);
-    }
-  }
-
-  function handle_preview(input, image) {
-    input.on('change', function() {
-      readURL(this, image);
-    });
-  }
-</script>
+<%= javascript_include_tag('admin/users/edit') %>
