--- a/app/assets/stylesheets/users/show.css
+++ b/app/assets/stylesheets/users/show.css
@@ -113,6 +113,20 @@
   width: 100%;
 }
 
+#public_profile_main .container_ .list_items .default_avatar {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: var(--main_color);
+  text-align: center;
+  color: #fff;
+}
+#public_profile_main .container_ .list_items .default_avatar .username_short {
+  line-height: 100px;
+  font-size: 2rem;
+  font-weight: 800;
+}
+
 #public_profile_main .container_ .list_items .card-img {
   width: 100%;
   object-fit: cover;
