--- a/app/views/users/_show_album.html.erb
+++ b/app/views/users/_show_album.html.erb
@@ -1,5 +1,5 @@
-<% if @albums.present? %>
-        <% @albums.each do |album| %>
+<% if @content.present? %>
+        <% @content.each do |album| %>
             <div class="photo_container col-md-3 col-10 m-5 m-md-0">
                 <img
                     src="<%= album.photos.count > 0 ? album.photos.first&.image_url : asset_path('default_photo.jpg') %>"
