refactor: page title

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Manage users") %>
 <main id="users_admin_main" class="row m-0">
     <!-- Sidebar -->
     <%= render "layouts/sidebar" %>
