--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -1,5 +1,5 @@
 <%= stylesheet_link_tag 'albums/index'%>
-<% provide(:title, "Feeds") %>
+<% provide(:title, "Feeds albums") %>
 <main id="main_album" class="row m-0">
     <%= render "layouts/sidebar" %>
 
