--- a/app/views/photos/discover.html.erb
+++ b/app/views/photos/discover.html.erb
@@ -1,5 +1,5 @@
 <%= stylesheet_link_tag 'photos/index'%>
-<% provide(:title, "Discovers") %>
+<% provide(:title, "Discover photos") %>
 
 <main id="main" class="photo_file row m-0" style="height: 100%">
     <%= render "layouts/sidebar" %>
