--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "New photos") %>
 <main id="main_new_photo" class="row m-0">
     <!-- Sidebar -->
     <%= render "layouts/sidebar" %>
