--- a/app/views/photos/photo_feeds.html.erb
+++ b/app/views/photos/photo_feeds.html.erb
@@ -1,5 +1,5 @@
 <%= stylesheet_link_tag 'photos/index'%>
-<% provide(:title, "Feeds") %>
+<% provide(:title, "Feeds photos") %>
 
 <main id="main" class="photo_file row m-0">
     <%= render "layouts/sidebar" %>
