--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "User profile") %>
 <main id="public_profile_main" class="row m-0">
     <%= render "layouts/sidebar" %>
     <!-- Main content -->
