--- a/app/views/admin/albums/index.html.erb
+++ b/app/views/admin/albums/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Manage albums") %>
 <main id="admin_albums_main" class="row m-0">
     <!-- Sidebar -->
     <%= render "layouts/sidebar" %>
