--- a/app/views/admin/photos/index.html.erb
+++ b/app/views/admin/photos/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Manage photos") %>
 <main id="admin_photos_main" class="row m-0">
     <!-- Sidebar -->
     <%= render "layouts/sidebar" %>
