--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "New albums") %>
 <main id="main_new_album" class="row m-0">
     <!-- Sidebar -->
     <%= render "layouts/sidebar" %>
