refactor:  common js

--- a/app/views/albums/_card.html.erb
+++ b/app/views/albums/_card.html.erb
@@ -1,4 +1,4 @@
-<div class="card" data-id="<%= album.id %>" data-user="<%= album.user.id %>" onclick="toggleAlbumModal('<%= 'album' + album.id.to_s %>')" data-bs-target="<%= "album" + album.id.to_s %>">
+<div class="card" data-id="<%= album.id %>" data-user="<%= album.user.id %>" onclick="toggleModal('<%= 'album' + album.id.to_s %>')" data-bs-target="<%= "album" + album.id.to_s %>">
     <div class="row g-0 w-100">
         <div class="col-lg-6">
             <div class="photo_container">
@@ -32,7 +32,7 @@
                     <span class="user_name"><%= album.user.first_name + album.user.last_name %></span>  
                 </div>
                 <% if request.path.include?('discover') %>
-                    <button class="custom_btn <%= current_user && current_user.followers.pluck(:id).include?(album.user.id) ? "custom_btn_followed" : "" %>" id="follow_btn" disabled >
+                    <button class="custom_btn <%= current_user && current_user.followers.pluck(:id).include?(album.user.id) ? "custom_btn_followed" : "" %>" id="follow_btn" <%= "disabled" unless current_user %> >
                         <%= current_user && current_user.followers.pluck(:id).include?(album.user.id) ? "Following" : "Follow" %>
                     </button>
                 <% end %>
