--- a/app/views/photos/photo_feeds.html.erb
+++ b/app/views/photos/photo_feeds.html.erb
@@ -27,4 +27,7 @@
     <div class="col-2"></div>
 </main>
 
-<%= javascript_include_tag 'photos/photo_feeds' %>
+<%= javascript_include_tag 'common/toggleModal' %>
+<%= javascript_include_tag 'common/userPropagate' %>
+<%= javascript_include_tag 'common/reactPropagate' %>
+<%= javascript_include_tag 'photos/photo_feeds', type: "module" %>
