--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -85,4 +85,4 @@
     <% end %>
 </main>
 
-<%= javascript_include_tag('users/show') %>
+<%= javascript_include_tag 'users/show', :type => "module" %>
