--- a/app/views/albums/discover.html.erb
+++ b/app/views/albums/discover.html.erb
@@ -25,4 +25,9 @@
     <div class="col-2"></div>
 </main>
 
-<%= javascript_include_tag('albums/discover') %>
+<%= javascript_include_tag('common/toggleModal') %>
+<%= javascript_include_tag('common/userPropagate') %>
+<%= javascript_include_tag('common/followPropagate') %>
+<%= javascript_include_tag('common/reactPropagate') %>
+
+<%= javascript_include_tag 'albums/discover', type: "module" %>
