--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -28,4 +28,7 @@
     <div class="col-2"></div>
 </main>
 
-<%= javascript_include_tag 'albums/index' %>
+<%= javascript_include_tag 'common/toggleModal' %>
+<%= javascript_include_tag 'common/userPropagate' %>
+<%= javascript_include_tag 'common/reactPropagate' %>
+<%= javascript_include_tag 'albums/index', type: "module" %>
