--- a/app/views/users/_show_follow.html.erb
+++ b/app/views/users/_show_follow.html.erb
@@ -42,7 +42,7 @@
                 "
             >
                 <div style="line-height: 1rem; display: flex; flex-direction: column; gap: 0.5rem;">
-                    <span style="font-size: 2rem; font-weight: bold"><%= user.photos.count %></span>
+                    <span style="font-size: 2rem; font-weight: bold"><%= user.photos.size %></span>
                     <span style="font-size: 0.8rem">PHOTOS</span>
                 </div>
                 <div style="line-height: 1rem; display: flex; flex-direction: column; gap: 0.5rem;">
