--- a/app/views/users/_show_follow.html.erb
+++ b/app/views/users/_show_follow.html.erb
@@ -46,7 +46,7 @@
                     <span style="font-size: 0.8rem">PHOTOS</span>
                 </div>
                 <div style="line-height: 1rem; display: flex; flex-direction: column; gap: 0.5rem;">
-                    <span style="font-size: 2rem; font-weight: bold"><%= user.albums.count %></span>
+                    <span style="font-size: 2rem; font-weight: bold"><%= user.albums.size %></span>
                     <span style="font-size: 0.8rem">ALBUMS</span>
                 </div>
             </div>
