--- a/app/views/users/_show_follow.html.erb
+++ b/app/views/users/_show_follow.html.erb
@@ -57,5 +57,5 @@
         </div>
     <% end %>
 <% else %>
-    <h2>No following user</h2>
+    <h6 style="text-align: center">No follower/following users </h6>
 <% end %>
