--- a/app/views/photos/_card.html.erb
+++ b/app/views/photos/_card.html.erb
@@ -12,8 +12,9 @@
         <div class="col-lg-6 p-2">
             <div class="post_user_info">
                 <div class="user_info_part">
-                    <% if photo.user.avatar.present? %>
-                        <img src="<%= photo.user.avatar %>" class="default_avatar" alt="avatar" />
+                    <% avatar_url = photo.user.avatar.present? ?  photo.user.avatar : photo.user.avatar_identifier %>
+                    <% if avatar_url %>
+                        <img src="<%= avatar_url %>" class="default_avatar" alt="avatar" />
                     <% else %>
                         <div class="default_avatar">
                             <span class="username_short"><%= photo.user.first_name[0] + photo.user.last_name[0] %></span>
