--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -5,17 +5,7 @@
 
     <!-- Main content -->
     <div class="container_ col-12 col-md-8 m-md-0 justify-content-none">
-        <div class="" style="width: 100%">
-            <h5 class="float-start fw-bold">Edit photo</h5>
-            <button
-                type="button"
-                class="btn float-end display-block mb-3"
-                style="background-color: var(--main_color); color: white"
-            >
-                Back
-            </button> 
-            <hr style="width: 100%; border: 2px solid #555" />
-        </div>
+        <%= render "shared/update_header", title: "Edit photo" %>
 
         <%= render "form", photo: @photo %>
     </div>
