--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -4,10 +4,7 @@
   <!-- Main content -->
   <div class="container_ col-12 col-md-8 m-md-0 justify-content-none">
     <!-- Header -->
-    <div class="" style="width: 100%">
-      <h5 class="float-start fw-bold">Edit user profile</h5>
-      <hr style="width: 100%; border: 2px solid #555" />
-    </div>
+    <%= render "shared/update_header", title: "Edit user profile" %>
 
     <!-- Content -->
     <%= render "form_edit_user" %>
