--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -44,4 +44,5 @@
     <% end %>
 </main>
 
+<%= javascript_include_tag 'common/closeToast' %>
 <%= javascript_include_tag 'users/show', :type => "module" %>
