--- a/app/views/albums/_card.html.erb
+++ b/app/views/albums/_card.html.erb
@@ -37,9 +37,13 @@
                     <%= album.description %>
                 </p>
                 <div class="post_createdAt">
-                    <i class="fa fa-heart p-2 <%= current_user && current_user.albums_reactions.pluck(:album_id).include?(album.id) ? "" : "text-secondary" %>" style="color: var(--main_color); font-size: 1rem;" role="button" id="<%= album.id %>">
-                        <span id="number_of_like" style="margin-left: 0.3rem;"><%= album.number_like %></span>
-                    </i>
+                    <% if  current_user %>
+                        <i class="fa fa-heart p-2 <%= current_user && current_user.albums_reactions.pluck(:album_id).include?(album.id) ? "" : "text-secondary" %>" style="color: var(--main_color); font-size: 1rem;" role="button" id="<%= album.id %>">
+                            <span id="number_of_like" style="margin-left: 0.3rem;"><%= album.number_like %></span>
+                        </i>
+                    <% else %>
+                        <div></div>
+                    <% end %>
                     <small class="text-body-secondary"
                         ><%= album.created_at.strftime("%T %F") %></small
                     >
