--- a/app/views/users/_nav_link.html.erb
+++ b/app/views/users/_nav_link.html.erb
@@ -1,3 +1,3 @@
 <a class="navigation <%= active_nav_class(path) %>" href="/users/<%= params[:id] %>/<%= path %>">
-  <span><%= nav_link_count(path) %></span> <%= title.capitalize %>
+  <span><%= nav_link_count(path, user) %></span> <%= title.capitalize %>
 </a>
