feat: add alert before deleting

--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -37,7 +37,7 @@
     <div>
         <%= f.submit "Save", class: "btn btn-success", style: "margin-right: 3rem" %>
         <% if request.path.include?('edit') %>
-            <%= link_to "Delete", @album, class: "btn btn-danger", method: :delete %>
+            <%= link_to "Delete", @album, class: "btn btn-danger", method: :delete, id: "delete-album" %>
         <% end %>
     </div>
 <% end %>
