--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -25,7 +25,7 @@
                         <td class="my-auto" style="margin: auto 0">
                             <div class="d-flex align-items-center justify-content-center" style="gap: 1rem;">
                                 <%= link_to "Edit", edit_admin_user_path(user.id), class: "btn btn-success" %>
-                                <%= button_to "Delete", admin_user_path(user.id), method: :delete, class: "btn btn-danger" %>
+                                <%= button_to "Delete", admin_user_path(user.id), method: :delete, class: "btn btn-danger", id: "delete-user" %>
                             </div>
                         </td>
                     </tr>
@@ -41,3 +41,5 @@
 
     <div class="col-md-2" style="background-color: #f8f8f8;"></div>
 </main>
+
+<%= javascript_include_tag 'admin/users/index' %>
