--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -69,7 +69,7 @@
     <div>
         <%= f.submit "Save", class: "btn btn-success", style: "margin-right: 3rem", method: :put %>
         <% if request.path.include?('edit') %>
-            <%= link_to "Delete", @photo, class: "btn btn-danger", method: :delete %>
+            <%= link_to "Delete", @photo, class: "btn btn-danger", method: :delete, id: "delete-photo" %>
         <% end %>
     </div>
 <% end %>
