--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -84,4 +84,4 @@
     </div>
 </header>
 
-<%= javascript_include_tag "common/search", type: "module" %>
+ <%= javascript_include_tag "common/search" %>
