--- a/app/views/photos/discover.html.erb
+++ b/app/views/photos/discover.html.erb
@@ -1,10 +1,10 @@
 <%= stylesheet_link_tag 'photos/index'%>
 <% provide(:title, "Discover photos") %>
 
-<main id="main" class="photo_file row m-0" style="height: 100%">
+<main id="main" class="photo_file row m-0" style="">
     <%= render "layouts/sidebar" %>
     <!-- Main content -->
-    <div class="container_ col-12 col-md-8 m-md-0 justify-content-none">
+    <div class="container_ col-12 col-md-8 m-md-0 justify-content-none" style="">
         <%= render "shared/feed_nav" %>
 
         <div
