--- a/app/assets/stylesheets/albums/index.css
+++ b/app/assets/stylesheets/albums/index.css
@@ -1,6 +1,6 @@
 #main_album {
   width: 100%;
-  height: calc(100vh - var(--header-height));
+  height: 100%;
   display: flex;
   align-items: start;
   /* justify-content: center; */
@@ -10,7 +10,7 @@
 }
 
 #main_album .container_ {
-  height: 100%;
+  min-height: calc(100vh - var(--header-height));
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
