--- a/app/assets/stylesheets/photos/index.css
+++ b/app/assets/stylesheets/photos/index.css
@@ -1,6 +1,6 @@
 #main {
   width: 100%;
-  height: calc(100vh - var(--header-height));
+  height: 100%;
   display: flex;
   align-items: start;
   /* justify-content: center; */
@@ -9,7 +9,7 @@
 }
 
 #main .container_ {
-  height: 100%;
+  min-height: calc(100vh - var(--header-height));
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
