--- a/app/views/photos/_card.html.erb
+++ b/app/views/photos/_card.html.erb
@@ -22,7 +22,7 @@
                     <% end %>
                     <span class="user_name"><%= photo.user.first_name + photo.user.last_name %></span>  
                 </div>
-                <% if request.path.include?('discover') %>
+                <% if request.path.include?('discover') && current_user.id != photo.user.id %>
                     <button class="custom_btn <%= current_user && current_user.followers.pluck(:id).include?(photo.user.id) ? "custom_btn_followed" : "" %>" id="follow_btn" <%= "disabled" unless current_user %> >
                         <%= current_user && current_user.followers.pluck(:id).include?(photo.user.id) ? "Following" : "Follow" %>
                     </button>
