fix: asset compiler prod

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -100,7 +100,7 @@
       href="/users/sign_in"
       class="text-center new-account"
       style="color: var(--main_color); text-decoration: none"
-      >Create an account
+      >Login with an existing account
     </a>
   </div>
 </main>
